# CompNet-project

./: .gitignore  README.md  random_contents.md
client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run_client.sh  run_server.sh
client/include/: header.h  host.h  receiver.h  sender.h
client/src/: host.cc  receiver.cc  sender.cc  traffic.cpp
client_backup/include/: sample  sample.cpp
switch/p4src_detect/: ecmp.p4  ecmp.p4i  headers.p4  parsers.p4
switch/p4src_simple/: ecmp.json  ecmp.p4  ecmp.p4i  headers.p4  p4app.json  parsers.p4  routing_controller.py  topology.db
switch/p4src_sum/: ecmp.json  ecmp.p4  ecmp.p4i  topology.db
switch/scripts/: log_generator.py  packet_monitor.py  routing_controller.py
switch_backup/p4src_simple/: ecmp.p4  parsers.p4
